Fixed boxed layout menu overflow.

--- a/style.less
+++ b/style.less
@@ -501,6 +501,12 @@ body.responsive {
 		}
 	}
 
+	&.layout-boxed {
+		#page-wrapper {
+			overflow-x: visible;
+		}
+	}
+
 	&.layout-full #page-wrapper{
 		.full-container {
 			max-width: 1080px;
